--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "allez-orm",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "AllezORM: lightweight browser SQLite ORM (sql.js) + schema generator CLI",
   "type": "module",
-
   "main": "./allez-orm.mjs",
   "module": "./allez-orm.mjs",
   "browser": "./allez-orm.mjs",
-
   "types": "./types/index.d.ts",
   "exports": {
     ".": {
@@ -18,9 +16,7 @@
     "./cli": "./tools/allez-orm.mjs",
     "./package.json": "./package.json"
   },
-
   "sideEffects": false,
-
   "scripts": {
     "dev": "node dev-server.mjs",
     "dev:static": "serve -l 5173",
@@ -29,11 +25,9 @@
     "ddl:audit": "node tools/ddl-audit.mjs",
     "prepublishOnly": "node tests/test-cli.mjs && node tools/ddl-audit.mjs"
   },
-
   "bin": {
     "allez-orm": "tools/allez-orm.mjs"
   },
-
   "files": [
     "allez-orm.mjs",
     "types",
@@ -43,25 +37,34 @@
     "LICENSE",
     "package.json"
   ],
-
-  "keywords": ["sqlite", "orm", "schema", "cli", "browser", "sql.js"],
-
+  "keywords": [
+    "sqlite",
+    "orm",
+    "schema",
+    "cli",
+    "browser",
+    "sql.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AllezMarketing/allez-orm.git"
   },
-  "bugs": { "url": "https://github.com/AllezMarketing/allez-orm/issues" },
+  "bugs": {
+    "url": "https://github.com/AllezMarketing/allez-orm/issues"
+  },
   "homepage": "https://github.com/AllezMarketing/allez-orm#readme",
   "license": "ISC",
   "author": "Allez Marketing LLC",
-
   "dependencies": {
     "sql.js": "^1.13.0"
   },
   "devDependencies": {
     "serve": "^14.2.5"
   },
-
-  "engines": { "node": ">=18" },
-  "publishConfig": { "access": "public" }
+  "engines": {
+    "node": ">=18"
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
