--- a/package.json
+++ b/package.json
@@ -3,20 +3,27 @@
   "version": "1.0.3",
   "description": "AllezORM: lightweight browser SQLite ORM (sql.js) + schema generator CLI",
   "type": "module",
+
   "main": "./allez-orm.mjs",
   "module": "./allez-orm.mjs",
   "browser": "./allez-orm.mjs",
-  "types": "./types/index.d.ts",
+
+  "types": "./index.d.ts",
+  "typesVersions": {
+    "*": { "*": ["index.d.ts"] }
+  },
+
   "exports": {
     ".": {
-      "types": "./types/index.d.ts",
       "import": "./allez-orm.mjs",
       "default": "./allez-orm.mjs"
     },
     "./cli": "./tools/allez-orm.mjs",
     "./package.json": "./package.json"
   },
+
   "sideEffects": false,
+
   "scripts": {
     "dev": "node dev-server.mjs",
     "dev:static": "serve -l 5173",
@@ -25,46 +32,28 @@
     "ddl:audit": "node tools/ddl-audit.mjs",
     "prepublishOnly": "node tests/test-cli.mjs && node tools/ddl-audit.mjs"
   },
-  "bin": {
-    "allez-orm": "tools/allez-orm.mjs"
-  },
+
+  "bin": { "allez-orm": "tools/allez-orm.mjs" },
+
   "files": [
     "allez-orm.mjs",
-    "types",
+    "index.d.ts",
     "tools/allez-orm.mjs",
     "tools/ddl-audit.mjs",
     "README.md",
     "LICENSE",
     "package.json"
   ],
-  "keywords": [
-    "sqlite",
-    "orm",
-    "schema",
-    "cli",
-    "browser",
-    "sql.js"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AllezMarketing/allez-orm.git"
-  },
-  "bugs": {
-    "url": "https://github.com/AllezMarketing/allez-orm/issues"
-  },
+
+  "keywords": ["sqlite", "orm", "schema", "cli", "browser", "sql.js"],
+  "repository": { "type": "git", "url": "git+https://github.com/AllezMarketing/allez-orm.git" },
+  "bugs": { "url": "https://github.com/AllezMarketing/allez-orm/issues" },
   "homepage": "https://github.com/AllezMarketing/allez-orm#readme",
   "license": "ISC",
   "author": "Allez Marketing LLC",
-  "dependencies": {
-    "sql.js": "^1.13.0"
-  },
-  "devDependencies": {
-    "serve": "^14.2.5"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "publishConfig": {
-    "access": "public"
-  }
+
+  "dependencies": { "sql.js": "^1.13.0" },
+  "devDependencies": { "serve": "^14.2.5" },
+  "engines": { "node": ">=18" },
+  "publishConfig": { "access": "public" }
 }
